# sedale-gpt

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml  test.yml
src/sedale_gpt/: __main__.py  agent_card.py  agent_executor.py  app.py  guards.py  logging.py  peer_registry.json  system_prompt.md
src/sedale_gpt/tools/: __init__.py  composio.py  exa.py  peer_agents.py  registry.py  web.py
tests/: test_agent_card.py  test_app_imports.py  test_artifact_extraction.py  test_guards.py  test_peer_agents.py  test_tool_loop.py
