[project]
name = "sedale-gpt"
version = "1.0.0"
description = "A2A-protocol agent — Sedale GPT, capital formation advisory for infrastructure-scale projects"
requires-python = ">=3.11"
dependencies = [
  "a2a-sdk>=1.0.3",
  "sse-starlette>=2.0.0",  # transitive of a2a-sdk's JSON-RPC dispatcher; not pulled automatically
  "anthropic>=0.40.0",
  "exa-py>=1.0.9",
  "composio>=0.5.0",
  "httpx>=0.27.0",
  "starlette>=0.37.0",
  "uvicorn[standard]>=0.30.0",
  "slowapi>=0.1.9",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sedale_gpt = ["system_prompt.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
